99.9% done. is a mess